Enhance map overlay rendering with advanced geospatial visualization techniques
- Integrate advanced geotiff and vector field rendering using georaster and d3
- Add dynamic color scaling and layer management for scalar and vector overlays
- Implement flexible overlay loading with improved error handling and layer replacement
- Update package dependencies to support new geospatial visualization libraries

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
     <title>PAGASA 10-Day Forecast</title>
   </head>
   <body>
