--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
+    <!-- <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script> -->
     <title>PAGASA 10-Day Forecast</title>
   </head>
   <body>
