--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
-    <title>tanawPH</title>
+    <title>TenDay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
