Converrt the incoming TIF files from FLoat32 to Byte precision for improved loading times. Refactor the logic for rendering pixel colors.
- Implemented responsive button rendering in `ForecastContainer` based on device type.
- Added max width to `MunicitySelector` for better layout control.
- Updated `Navbar` to include clickable logo linking to PAGASA website.
- Improved `WeatherLayer` component with better color mapping logic and increased resolution.
- Added user-select style to `Legend` for better user experience.
- Updated overlay list with max values for various weather parameters.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4087,7 +4087,7 @@
 
     <link rel="icon" href="favicon.ico" />
 
-    <title>TenDay: Climate Forecast</title>
+    <title>TenDay: Weather Forecast</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
